--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "typescript": "^4.9.5"
   }
 }
