--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.10.0",
-    "i18next": "^25.3.1",
+    "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
@@ -47,8 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "tailwindcss": "^4.1.11",
-    "typescript": "^4.9.5"
+    "devDependencies": {
+    "typescript": "4.9.5",
+    "fork-ts-checker-webpack-plugin": "^7.2.13"
   }
 }
